Ngubah Designed by

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           Just sit, relax, and enjoy the creation. Peace ✌️
         </p>
         <br />
-        <h6 class="ketJudul">designed by:</h6>
+        <h3 class="ketJudul">Designed by:</h3>
       </div>
       <div class="container">
         <div class="row text-center d-block d-sm-flex">
