--- a/index.html
+++ b/index.html
@@ -414,6 +414,16 @@
                     </div>
                     <br /><div class="col">
                       <div class="card">
+                        <img src="/img/pictca22.jpg" class="card-img-top" alt="penghuni 2CA" />
+                        <div class="card-body">
+                          <h5 class="card-title">Satria</h5>
+                          <p class="card-text">Penghuni 2CA 👻</p>
+                        </div>
+                      </div>
+                    </div>
+                    <br />
+                    <br /><div class="col">
+                      <div class="card">
                         <img src="/img/22.jpg" class="card-img-top" alt="penghuni 2CA" />
                         <div class="card-body">
                           <h5 class="card-title">Sintia</h5>
@@ -430,16 +440,7 @@
                         </div>
                       </div>
                     </div>
-                    <br /><div class="col">
-                      <div class="card">
-                        <img src="/img/12.jpg" class="card-img-top" alt="penghuni 2CA" />
-                        <div class="card-body">
-                          <h5 class="card-title">Iga</h5>
-                          <p class="card-text">Penghuni 2CA 👻</p>
-                        </div>
-                      </div>
-                    </div>
-                    <br />
+                    
                            
     <!--FOOTER-->
     <!--CONTACT-->
