--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
     <!-- <base href="/Projek-UAS-Web/"> -->
     <title>Projek UAS</title>
   </head>
-  <body class="">
+  <body class="unguGelap">
     <!--NAVBAR-->
     <nav
-      class="navbar navbar-expand-lg bg-dark border-bottom border-body fixed-top"
+      class="navbar navbar-expand-lg bg-dark border-body fixed-top"
       data-bs-theme="dark"
     >
       <div class="container-fluid">
@@ -93,15 +93,16 @@
     <section class="pt-5 container home header" id="home">
       <div class="home">
         <h1 class="text-center">
-          <span class="ungu">WELCOME</span> TO
-          <em class="ungu">CA'24</em> WEBSITE
+          <span class="ungu">WELCOME</span> <span class="putih">TO</span>
+          <em class="ungu">CA'24</em> <span class="putih">WEBSITE</span>
         </h1>
-        <p class="ketJudul lead container pt-3 text-center">
+        <p class="ketJudul putih lead container pt-3 text-center">
           Behold the creation of the great admins that will make you amazed.
-          Just sit, relax, and enjoy the creation. Peace ✌️
+          Just sit, relax, and enjoy the creation.
+          <span class="ungu">Peace</span> ✌️
         </p>
         <br />
-        <h3 class="ketJudul">Designed by:</h3>
+        <h3 class="ketJudul putih">Designed by:</h3>
       </div>
       <div class="container">
         <div class="row text-center d-block d-sm-flex">
@@ -204,7 +205,7 @@
       <div class="container">
         <div class="row g-4 align-item-center">
           <div class="col-md">
-            <h2>Contact Us</h2>
+            <h2 class="putih">Contact Us</h2>
             <ul class="list-group list-group-flush">
               <li class="list-group-item">
                 <i class="bi bi-instagram"></i>
