--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
               <a href="#" class="nav-link">ClassCrew</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link">Classmates</a>
+              <a href="#classmates" class="nav-link">Classmates</a>
             </li>
             <li class="nav-item">
               <a href="#Contact" class="nav-link">Contact</a>
@@ -198,10 +198,13 @@
         </div>
       </div>
     </div>
-     <br />
-     <br />
+    <br />
+    <br />
+
     <!--classmates-->
-    <div class="container">
+    <!-- ENJOY QEY 200 LINE WKWKWKWK -->
+    <!-- ROW 1 -->
+    <div class="container" id="classmates">
       <div class="row text-center d-block d-sm-flex">
         <div class="col mb-3">
           <div class="card">
@@ -262,187 +265,212 @@
             </div>
           </div>
         </div>
+      </div>
+    </div>
+    <br />
+
+    <!-- ROW 2 -->
+    <div class="container">
+      <div class="row text-center d-block d-sm-flex">
+        <div class="col mb-3">
+          <div class="card">
+            <img src="/img/7.jpg" class="card-img-top" alt="penghuni 2CA" />
+            <div class="card-body">
+              <h5 class="card-title">Dinda</h5>
+              <p class="card-text">Penghuni 2CA 👻</p>
+            </div>
+          </div>
+        </div>
         <br />
+        <div class="col">
+          <div class="card">
+            <img src="/img/8.jpg" class="card-img-top" alt="penghuni 2CA" />
+            <div class="card-body">
+              <h5 class="card-title">Dini</h5>
+              <p class="card-text">Penghuni 2CA 👻</p>
+            </div>
+          </div>
+        </div>
+        <br />
+        <div class="col">
+          <div class="card">
+            <img src="/img/9.jpg" class="card-img-top" alt="penghuni 2CA" />
+            <div class="card-body">
+              <h5 class="card-title">Vemi</h5>
+              <p class="card-text">Penghuni 2CA 👻</p>
+            </div>
+          </div>
+        </div>
+        <br />
+        <div class="col">
+          <div class="card">
+            <img src="/img/10.jpg" class="card-img-top" alt="penghuni 2CA" />
+            <div class="card-body">
+              <h5 class="card-title">Elona</h5>
+              <p class="card-text">Penghuni 2CA 👻</p>
+            </div>
+          </div>
+        </div>
+        <br />
+        <div class="col">
+          <div class="card">
+            <img src="/img/11.jpg" class="card-img-top" alt="penghuni 2CA" />
+            <div class="card-body">
+              <h5 class="card-title">Fadhli</h5>
+              <p class="card-text">Penghuni 2CA 👻</p>
+            </div>
+          </div>
+        </div>
+        <br />
+        <div class="col">
+          <div class="card">
+            <img src="/img/12.jpg" class="card-img-top" alt="penghuni 2CA" />
+            <div class="card-body">
+              <h5 class="card-title">Iga</h5>
+              <p class="card-text">Penghuni 2CA 👻</p>
+            </div>
+          </div>
+        </div>
+        <br />
+      </div>
+    </div>
 
-        <div class="container">
-          <div class="row text-center d-block d-sm-flex">
-            <div class="col mb-3">
-              <div class="card">
-                <img src="/img/7.jpg" class="card-img-top" alt="penghuni 2CA" />
-                <div class="card-body">
-                  <h5 class="card-title">Dinda</h5>
-                  <p class="card-text">Penghuni 2CA 👻</p>
-                </div>
-              </div>
+    <!-- ROW 3 -->
+    <div class="container">
+      <div class="row text-center d-block d-sm-flex">
+        <div class="col mb-3">
+          <div class="card">
+            <img src="/img/13.jpg" class="card-img-top" alt="penghuni 2CA" />
+            <div class="card-body">
+              <h5 class="card-title">Agung</h5>
+              <p class="card-text">Penghuni 2CA 👻</p>
             </div>
-            <br />
-            <div class="col">
-              <div class="card">
-                <img src="/img/8.jpg" class="card-img-top" alt="penghuni 2CA" />
-                <div class="card-body">
-                  <h5 class="card-title">Dini</h5>
-                  <p class="card-text">Penghuni 2CA 👻</p>
-                </div>
-              </div>
+          </div>
+        </div>
+        <br />
+        <div class="col">
+          <div class="card">
+            <img src="/img/14.jpg" class="card-img-top" alt="penghuni 2CA" />
+            <div class="card-body">
+              <h5 class="card-title">Mayang</h5>
+              <p class="card-text">Penghuni 2CA 👻</p>
             </div>
-            <br />
-            <div class="col">
-              <div class="card">
-                <img src="/img/9.jpg" class="card-img-top" alt="penghuni 2CA" />
-                <div class="card-body">
-                  <h5 class="card-title">Vemi</h5>
-                  <p class="card-text">Penghuni 2CA 👻</p>
-                </div>
-              </div>
+          </div>
+        </div>
+        <br />
+        <div class="col">
+          <div class="card">
+            <img src="/img/15.jpg" class="card-img-top" alt="penghuni 2CA" />
+            <div class="card-body">
+              <h5 class="card-title">Atha</h5>
+              <p class="card-text">Penghuni 2CA 👻</p>
             </div>
-            <br /><div class="col">
-              <div class="card">
-                <img src="/img/10.jpg" class="card-img-top" alt="penghuni 2CA" />
-                <div class="card-body">
-                  <h5 class="card-title">Elona</h5>
-                  <p class="card-text">Penghuni 2CA 👻</p>
-                </div>
-              </div>
+          </div>
+        </div>
+        <br />
+        <div class="col">
+          <div class="card">
+            <img src="/img/16.jpg" class="card-img-top" alt="penghuni 2CA" />
+            <div class="card-body">
+              <h5 class="card-title">Iqbal</h5>
+              <p class="card-text">Penghuni 2CA 👻</p>
             </div>
-            <br /><div class="col">
-              <div class="card">
-                <img src="/img/11.jpg" class="card-img-top" alt="penghuni 2CA" />
-                <div class="card-body">
-                  <h5 class="card-title">Fadhli</h5>
-                  <p class="card-text">Penghuni 2CA 👻</p>
-                </div>
-              </div>
+          </div>
+        </div>
+        <br />
+        <div class="col">
+          <div class="card">
+            <img src="/img/17.jpg" class="card-img-top" alt="penghuni 2CA" />
+            <div class="card-body">
+              <h5 class="card-title">Raihan</h5>
+              <p class="card-text">Penghuni 2CA 👻</p>
             </div>
-            <br /><div class="col">
-              <div class="card">
-                <img src="/img/12.jpg" class="card-img-top" alt="penghuni 2CA" />
-                <div class="card-body">
-                  <h5 class="card-title">Iga</h5>
-                  <p class="card-text">Penghuni 2CA 👻</p>
-                </div>
-              </div>
+          </div>
+        </div>
+        <br />
+        <div class="col">
+          <div class="card">
+            <img src="/img/18.jpg" class="card-img-top" alt="penghuni 2CA" />
+            <div class="card-body">
+              <h5 class="card-title">Zacky</h5>
+              <p class="card-text">Penghuni 2CA 👻</p>
             </div>
-            <br />
+          </div>
+        </div>
+        <br />
+      </div>
+    </div>
 
-            <div class="container">
-              <div class="row text-center d-block d-sm-flex">
-                <div class="col mb-3">
-                  <div class="card">
-                    <img src="/img/13.jpg" class="card-img-top" alt="penghuni 2CA" />
-                    <div class="card-body">
-                      <h5 class="card-title">Agung</h5>
-                      <p class="card-text">Penghuni 2CA 👻</p>
-                    </div>
-                  </div>
-                </div>
-                <br />
-                <div class="col">
-                  <div class="card">
-                    <img src="/img/14.jpg" class="card-img-top" alt="penghuni 2CA" />
-                    <div class="card-body">
-                      <h5 class="card-title">Mayang</h5>
-                      <p class="card-text">Penghuni 2CA 👻</p>
-                    </div>
-                  </div>
-                </div>
-                <br /><div class="col">
-                  <div class="card">
-                    <img src="/img/15.jpg" class="card-img-top" alt="penghuni 2CA" />
-                    <div class="card-body">
-                      <h5 class="card-title">Atha</h5>
-                      <p class="card-text">Penghuni 2CA 👻</p>
-                    </div>
-                  </div>
-                </div>
-                <br /><div class="col">
-                  <div class="card">
-                    <img src="/img/16.jpg" class="card-img-top" alt="penghuni 2CA" />
-                    <div class="card-body">
-                      <h5 class="card-title">Iqbal</h5>
-                      <p class="card-text">Penghuni 2CA 👻</p>
-                    </div>
-                  </div>
-                </div>
-                <br /><div class="col">
-                  <div class="card">
-                    <img src="/img/17.jpg" class="card-img-top" alt="penghuni 2CA" />
-                    <div class="card-body">
-                      <h5 class="card-title">Raihan</h5>
-                      <p class="card-text">Penghuni 2CA 👻</p>
-                    </div>
-                  </div>
-                </div>
-                <br /><div class="col">
-                  <div class="card">
-                    <img src="/img/18.jpg" class="card-img-top" alt="penghuni 2CA" />
-                    <div class="card-body">
-                      <h5 class="card-title">Zacky</h5>
-                      <p class="card-text">Penghuni 2CA 👻</p>
-                    </div>
-                  </div>
-                </div>
-                <br />
+    <!-- ROW 4 -->
+    <div class="container">
+      <div class="row text-center d-block d-sm-flex">
+        <div class="col mb-3">
+          <div class="card">
+            <img src="/img/19.jpg" class="card-img-top" alt="penghuni 2CA" />
+            <div class="card-body">
+              <h5 class="card-title">Muthia</h5>
+              <p class="card-text">Penghuni 2CA 👻</p>
+            </div>
+          </div>
+        </div>
+        <br />
+        <div class="col">
+          <div class="card">
+            <img src="/img/20.jpg" class="card-img-top" alt="penghuni 2CA" />
+            <div class="card-body">
+              <h5 class="card-title">Raden</h5>
+              <p class="card-text">Alan Kontol 👻</p>
+            </div>
+          </div>
+        </div>
+        <br />
+        <div class="col">
+          <div class="card">
+            <img src="/img/21.jpg" class="card-img-top" alt="penghuni 2CA" />
+            <div class="card-body">
+              <h5 class="card-title">Reva</h5>
+              <p class="card-text">Penghuni 2CA 👻</p>
+            </div>
+          </div>
+        </div>
+        <br />
+        <div class="col">
+          <div class="card">
+            <img
+              src="/img/pictca22.jpg"
+              class="card-img-top"
+              alt="penghuni 2CA"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Satria</h5>
+              <p class="card-text">Penghuni 2CA 👻</p>
+            </div>
+          </div>
+        </div>
+        <br />
+        <br />
+        <div class="col">
+          <div class="card">
+            <img src="/img/22.jpg" class="card-img-top" alt="penghuni 2CA" />
+            <div class="card-body">
+              <h5 class="card-title">Sintia</h5>
+              <p class="card-text">Penghuni 2CA 👻</p>
+            </div>
+          </div>
+        </div>
+        <br />
+        <div class="col">
+          <div class="card">
+            <img src="/img/23.jpg" class="card-img-top" alt="penghuni 2CA" />
+            <div class="card-body">
+              <h5 class="card-title">Siti</h5>
+              <p class="card-text">Penghuni 2CA 👻</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
-                <div class="container">
-                  <div class="row text-center d-block d-sm-flex">
-                    <div class="col mb-3">
-                      <div class="card">
-                        <img src="/img/19.jpg" class="card-img-top" alt="penghuni 2CA" />
-                        <div class="card-body">
-                          <h5 class="card-title">Muthia</h5>
-                          <p class="card-text">Penghuni 2CA 👻</p>
-                        </div>
-                      </div>
-                    </div>
-                    <br />
-                    <div class="col">
-                      <div class="card">
-                        <img src="/img/20.jpg" class="card-img-top" alt="penghuni 2CA" />
-                        <div class="card-body">
-                          <h5 class="card-title">Raden</h5>
-                          <p class="card-text">Penghuni 2CA 👻</p>
-                        </div>
-                      </div>
-                    </div>
-                    <br /><div class="col">
-                      <div class="card">
-                        <img src="/img/21.jpg" class="card-img-top" alt="penghuni 2CA" />
-                        <div class="card-body">
-                          <h5 class="card-title">Reva</h5>
-                          <p class="card-text">Penghuni 2CA 👻</p>
-                        </div>
-                      </div>
-                    </div>
-                    <br /><div class="col">
-                      <div class="card">
-                        <img src="/img/pictca22.jpg" class="card-img-top" alt="penghuni 2CA" />
-                        <div class="card-body">
-                          <h5 class="card-title">Satria</h5>
-                          <p class="card-text">Penghuni 2CA 👻</p>
-                        </div>
-                      </div>
-                    </div>
-                    <br />
-                    <br /><div class="col">
-                      <div class="card">
-                        <img src="/img/22.jpg" class="card-img-top" alt="penghuni 2CA" />
-                        <div class="card-body">
-                          <h5 class="card-title">Sintia</h5>
-                          <p class="card-text">Penghuni 2CA 👻</p>
-                        </div>
-                      </div>
-                    </div>
-                    <br /><div class="col">
-                      <div class="card">
-                        <img src="/img/23.jpg" class="card-img-top" alt="penghuni 2CA" />
-                        <div class="card-body">
-                          <h5 class="card-title">Siti</h5>
-                          <p class="card-text">Penghuni 2CA 👻</p>
-                        </div>
-                      </div>
-                    </div>
-                    
-                           
     <!--FOOTER-->
     <!--CONTACT-->
     <section class="p-5" id="Contact">
