--- a/index.html
+++ b/index.html
@@ -191,12 +191,12 @@
         </div>
         <div class="col-md-6">
           <img
-            class="img-fluid d-block d-sm-flex rounded shadow"
+            class="fotosekelas img-fluid d-block d-sm-flex rounded shadow"
             src="/img/1CA.JPG"
             alt="Foto Sekelas"
           />
         </div>
-      </div>
+      </div> 
     </div>
     <br />
     <br />
@@ -419,7 +419,7 @@
             <img src="/img/20.jpg" class="card-img-top" alt="penghuni 2CA" />
             <div class="card-body">
               <h5 class="card-title">Raden</h5>
-              <p class="card-text">Alan Kontol 👻</p>
+              <p class="card-text">Penghuni 2CA👻</p>
             </div>
           </div>
         </div>
