--- a/index.html
+++ b/index.html
@@ -211,7 +211,19 @@
             <img src="/img/1.jpg" class="card-img-top" alt="penghuni 2CA" />
             <div class="card-body">
               <h5 class="card-title">Hanif</h5>
-              <p class="card-text">Penghuni 2CA 👻</p>
+              <p class="card-text">
+                <i class="bi bi-instagram"></i>
+                <span class="fw-bold">Instagram</span>
+                <br />
+                <a
+                  class="linkContact"
+                  href="https://www.instagram.com/hanifchanz__?igsh=bDgxMXhuZ2M0ZDJ6"
+                  target="_blank"
+                  data-bs-toggle="tooltip"
+                  data-bs-placement="right"
+                  title="Suka bilang bang"
+                  >@hanifchanz__</a>
+              </p>
             </div>
           </div>
         </div>
@@ -221,7 +233,19 @@
             <img src="/img/2.jpg" class="card-img-top" alt="penghuni 2CA" />
             <div class="card-body">
               <h5 class="card-title">Ade</h5>
-              <p class="card-text">Penghuni 2CA 👻</p>
+              <p class="card-text">
+                 <i class="bi bi-instagram"></i>
+                <span class="fw-bold">Instagram</span>
+                <br />
+                <a
+                  class="linkContact"
+                  href="https://www.instagram.com/adeapriliasafitri?igsh=MXB0NHJ2ZG5wZG92eQ=="
+                  target="_blank"
+                  data-bs-toggle="tooltip"
+                  data-bs-placement="right"
+                  title="Suka bilang bang"
+                  >@adeapriliasafitri</a>
+              </p>
             </div>
           </div>
         </div>
@@ -231,7 +255,19 @@
             <img src="/img/3.jpg" class="card-img-top" alt="penghuni 2CA" />
             <div class="card-body">
               <h5 class="card-title">Hakim</h5>
-              <p class="card-text">Penghuni 2CA 👻</p>
+              <p class="card-text">
+                <i class="bi bi-instagram"></i>
+                <span class="fw-bold">Instagram</span>
+                <br />
+                <a
+                  class="linkContact"
+                  href="https://www.instagram.com/akmckpp?igsh=MXM5Z2E5dTJlcXk1Nw=="
+                  target="_blank"
+                  data-bs-toggle="tooltip"
+                  data-bs-placement="right"
+                  title="Ganteng bnget gw jir"
+                  >@akmckpp</a>
+              </p>
             </div>
           </div>
         </div>
@@ -241,7 +277,19 @@
             <img src="/img/4.jpg" class="card-img-top" alt="penghuni 2CA" />
             <div class="card-body">
               <h5 class="card-title">Arqeysa</h5>
-              <p class="card-text">Penghuni 2CA 👻</p>
+              <p class="card-text">
+                <i class="bi bi-instagram"></i>
+                <span class="fw-bold">Instagram</span>
+                <br />
+                <a
+                  class="linkContact"
+                  href="https://www.instagram.com/arqyza?igsh=eWd5Y2FsOXM5ZXFz"
+                  target="_blank"
+                  data-bs-toggle="tooltip"
+                  data-bs-placement="right"
+                  title="Suka bilang bang"
+                  >@arqyza</a>
+              </p>
             </div>
           </div>
         </div>
@@ -251,7 +299,19 @@
             <img src="/img/5.jpg" class="card-img-top" alt="penghuni 2CA" />
             <div class="card-body">
               <h5 class="card-title">Danuar</h5>
-              <p class="card-text">Penghuni 2CA 👻</p>
+              <p class="card-text">
+                <i class="bi bi-instagram"></i>
+                <span class="fw-bold">Instagram</span>
+                <br />
+                <a
+                  class="linkContact"
+                  href="https://www.instagram.com/resantodanuar35?igsh=MWg2d3o5bmd0dWk2eQ=="
+                  target="_blank"
+                  data-bs-toggle="tooltip"
+                  data-bs-placement="right"
+                  title="Suka bilang bang"
+                  >@resantodanuar35</a>
+              </p>
             </div>
           </div>
         </div>
@@ -261,7 +321,19 @@
             <img src="/img/6.jpg" class="card-img-top" alt="penghuni 2CA" />
             <div class="card-body">
               <h5 class="card-title">Diah</h5>
-              <p class="card-text">Penghuni 2CA 👻</p>
+              <p class="card-text">
+                 <i class="bi bi-instagram"></i>
+                <span class="fw-bold">Instagram</span>
+                <br />
+                <a
+                  class="linkContact"
+                  href="https://www.instagram.com/dip.tw?igsh=MXA1N2hmYnhmNmNyOQ=="
+                  target="_blank"
+                  data-bs-toggle="tooltip"
+                  data-bs-placement="right"
+                  title="Suka bilang bang"
+                  >@dip.tw</a>
+              </p>
             </div>
           </div>
         </div>
@@ -277,7 +349,19 @@
             <img src="/img/7.jpg" class="card-img-top" alt="penghuni 2CA" />
             <div class="card-body">
               <h5 class="card-title">Dinda</h5>
-              <p class="card-text">Penghuni 2CA 👻</p>
+              <p class="card-text">
+                <i class="bi bi-instagram"></i>
+                <span class="fw-bold">Instagram</span>
+                <br />
+                <a
+                  class="linkContact"
+                  href="https://www.instagram.com/dinda_delaa?igsh=MXFpZjl3dnU3N3pldQ=="
+                  target="_blank"
+                  data-bs-toggle="tooltip"
+                  data-bs-placement="right"
+                  title="Suka bilang bang"
+                  >@dinda_delaa</a>
+              </p>
             </div>
           </div>
         </div>
@@ -287,7 +371,19 @@
             <img src="/img/8.jpg" class="card-img-top" alt="penghuni 2CA" />
             <div class="card-body">
               <h5 class="card-title">Dini</h5>
-              <p class="card-text">Penghuni 2CA 👻</p>
+              <p class="card-text">
+                 <i class="bi bi-instagram"></i>
+                <span class="fw-bold">Instagram</span>
+                <br />
+                <a
+                  class="linkContact"
+                  href="https://www.instagram.com/scndchceee_?igsh=bTduMTcyam55czUw"
+                  target="_blank"
+                  data-bs-toggle="tooltip"
+                  data-bs-placement="right"
+                  title="Suka bilang bang"
+                  >@scndchceee_</a>
+              </p>
             </div>
           </div>
         </div>
@@ -297,7 +393,19 @@
             <img src="/img/9.jpg" class="card-img-top" alt="penghuni 2CA" />
             <div class="card-body">
               <h5 class="card-title">Vemi</h5>
-              <p class="card-text">Penghuni 2CA 👻</p>
+              <p class="card-text">
+                <i class="bi bi-instagram"></i>
+                <span class="fw-bold">Instagram</span>
+                <br />
+                <a
+                  class="linkContact"
+                  href="https://www.instagram.com/dwivemi_aryani?igsh=aWc3dW5uZ3l3bTB2"
+                  target="_blank"
+                  data-bs-toggle="tooltip"
+                  data-bs-placement="right"
+                  title="Suka bilang bang"
+                  >@dwivemi_aryani</a>
+              </p>
             </div>
           </div>
         </div>
@@ -307,7 +415,19 @@
             <img src="/img/10.jpg" class="card-img-top" alt="penghuni 2CA" />
             <div class="card-body">
               <h5 class="card-title">Elona</h5>
-              <p class="card-text">Penghuni 2CA 👻</p>
+              <p class="card-text">
+                <i class="bi bi-instagram"></i>
+                <span class="fw-bold">Instagram</span>
+                <br />
+                <a
+                  class="linkContact"
+                  href="https://www.instagram.com/elonarsy?igsh=bWYxMjlneHFrb25h"
+                  target="_blank"
+                  data-bs-toggle="tooltip"
+                  data-bs-placement="right"
+                  title="Suka bilang bang"
+                  >@elonarsy</a>
+              </p>
             </div>
           </div>
         </div>
@@ -317,7 +437,19 @@
             <img src="/img/11.jpg" class="card-img-top" alt="penghuni 2CA" />
             <div class="card-body">
               <h5 class="card-title">Fadhli</h5>
-              <p class="card-text">Penghuni 2CA 👻</p>
+              <p class="card-text">
+                 <i class="bi bi-instagram"></i>
+                <span class="fw-bold">Instagram</span>
+                <br />
+                <a
+                  class="linkContact"
+                  href="https://www.instagram.com/fadh.36?igsh=dmNrM2ppNzJuZzht"
+                  target="_blank"
+                  data-bs-toggle="tooltip"
+                  data-bs-placement="right"
+                  title="Suka bilang bang"
+                  >@fadh.36</a>
+              </p>
             </div>
           </div>
         </div>
@@ -327,7 +459,19 @@
             <img src="/img/12.jpg" class="card-img-top" alt="penghuni 2CA" />
             <div class="card-body">
               <h5 class="card-title">Iga</h5>
-              <p class="card-text">Penghuni 2CA 👻</p>
+              <p class="card-text">
+                <i class="bi bi-instagram"></i>
+                <span class="fw-bold">Instagram</span>
+                <br />
+                <a
+                  class="linkContact"
+                  href="https://www.instagram.com/iga.mwr?igsh=MWl2azJpamFhNWpudQ=="
+                  target="_blank"
+                  data-bs-toggle="tooltip"
+                  data-bs-placement="right"
+                  title="Suka bilang bang"
+                  >@iga.mwr</a>
+              </p>
             </div>
           </div>
         </div>
@@ -343,7 +487,19 @@
             <img src="/img/13.jpg" class="card-img-top" alt="penghuni 2CA" />
             <div class="card-body">
               <h5 class="card-title">Agung</h5>
-              <p class="card-text">Penghuni 2CA 👻</p>
+              <p class="card-text">
+                <i class="bi bi-instagram"></i>
+                <span class="fw-bold">Instagram</span>
+                <br />
+                <a
+                  class="linkContact"
+                  href="https://www.instagram.com/yogaa1.__?igsh=MnJ4ejR1Nnl4eGE2"
+                  target="_blank"
+                  data-bs-toggle="tooltip"
+                  data-bs-placement="right"
+                  title="Suka bilang bang"
+                  >@yogaa1.__</a>
+              </p>
             </div>
           </div>
         </div>
@@ -353,7 +509,19 @@
             <img src="/img/14.jpg" class="card-img-top" alt="penghuni 2CA" />
             <div class="card-body">
               <h5 class="card-title">Mayang</h5>
-              <p class="card-text">Penghuni 2CA 👻</p>
+              <p class="card-text">
+                <i class="bi bi-instagram"></i>
+                <span class="fw-bold">Instagram</span>
+                <br />
+                <a
+                  class="linkContact"
+                  href="https://www.instagram.com/myngptr.lrsti?igsh=MThiYWp3aGQ5MWZmbw=="
+                  target="_blank"
+                  data-bs-toggle="tooltip"
+                  data-bs-placement="right"
+                  title="Suka bilang bang"
+                  >@myngptr.lrsti</a>
+              </p>
             </div>
           </div>
         </div>
@@ -363,7 +531,19 @@
             <img src="/img/15.jpg" class="card-img-top" alt="penghuni 2CA" />
             <div class="card-body">
               <h5 class="card-title">Atha</h5>
-              <p class="card-text">Penghuni 2CA 👻</p>
+              <p class="card-text">
+                <i class="bi bi-instagram"></i>
+                <span class="fw-bold">Instagram</span>
+                <br />
+                <a
+                  class="linkContact"
+                  href="https://www.instagram.com/athamufidd?igsh=MW9obWIybDVibXBnOA=="
+                  target="_blank"
+                  data-bs-toggle="tooltip"
+                  data-bs-placement="right"
+                  title="Suka bilang bang"
+                  >@athamufidd</a>
+              </p>
             </div>
           </div>
         </div>
@@ -373,7 +553,19 @@
             <img src="/img/16.jpg" class="card-img-top" alt="penghuni 2CA" />
             <div class="card-body">
               <h5 class="card-title">Iqbal</h5>
-              <p class="card-text">Penghuni 2CA 👻</p>
+              <p class="card-text">
+                <i class="bi bi-instagram"></i>
+                <span class="fw-bold">Instagram</span>
+                <br />
+                <a
+                  class="linkContact"
+                  href="https://www.instagram.com/iqbalsyarief_?igsh=MWF3b2R6aDh6aGNnbw=="
+                  target="_blank"
+                  data-bs-toggle="tooltip"
+                  data-bs-placement="right"
+                  title="Suka bilang bang"
+                  >@iqbalsyarief_</a>
+              </p>
             </div>
           </div>
         </div>
@@ -383,7 +575,19 @@
             <img src="/img/17.jpg" class="card-img-top" alt="penghuni 2CA" />
             <div class="card-body">
               <h5 class="card-title">Raihan</h5>
-              <p class="card-text">Penghuni 2CA 👻</p>
+              <p class="card-text">
+                <i class="bi bi-instagram"></i>
+                <span class="fw-bold">Instagram</span>
+                <br />
+                <a
+                  class="linkContact"
+                  href="https://www.instagram.com/karldenza?igsh=OXF0amgwb3dycGJh"
+                  target="_blank"
+                  data-bs-toggle="tooltip"
+                  data-bs-placement="right"
+                  title="Suka bilang bang"
+                  >@karldenza</a>
+              </p>
             </div>
           </div>
         </div>
@@ -393,7 +597,19 @@
             <img src="/img/18.jpg" class="card-img-top" alt="penghuni 2CA" />
             <div class="card-body">
               <h5 class="card-title">Zacky</h5>
-              <p class="card-text">Penghuni 2CA 👻</p>
+              <p class="card-text">
+                <i class="bi bi-instagram"></i>
+                <span class="fw-bold">Instagram</span>
+                <br />
+                <a
+                  class="linkContact"
+                  href="https://www.instagram.com/mhdzkyy05?igsh=dXhmYmRqMzhqMmFq"
+                  target="_blank"
+                  data-bs-toggle="tooltip"
+                  data-bs-placement="right"
+                  title="Suka bilang bang"
+                  >@mhdzkyy05</a>
+              </p>
             </div>
           </div>
         </div>
@@ -409,7 +625,19 @@
             <img src="/img/19.jpg" class="card-img-top" alt="penghuni 2CA" />
             <div class="card-body">
               <h5 class="card-title">Muthia</h5>
-              <p class="card-text">Penghuni 2CA 👻</p>
+              <p class="card-text">
+                <i class="bi bi-instagram"></i>
+                <span class="fw-bold">Instagram</span>
+                <br />
+                <a
+                  class="linkContact"
+                  href="https://www.instagram.com/muthi.aa0?igsh=bTYwNGdzbWFvNnRn"
+                  target="_blank"
+                  data-bs-toggle="tooltip"
+                  data-bs-placement="right"
+                  title="Suka bilang bang"
+                  >@muthi.aa0</a>
+              </p>
             </div>
           </div>
         </div>
@@ -419,7 +647,19 @@
             <img src="/img/20.jpg" class="card-img-top" alt="penghuni 2CA" />
             <div class="card-body">
               <h5 class="card-title">Raden</h5>
-              <p class="card-text">Penghuni 2CA👻</p>
+              <p class="card-text">
+                <i class="bi bi-instagram"></i>
+                <span class="fw-bold">Instagram</span>
+                <br />
+                <a
+                  class="linkContact"
+                  href="https://www.instagram.com/raiden_x420?igsh=ZnBlN2sxcmVtMnFv"
+                  target="_blank"
+                  data-bs-toggle="tooltip"
+                  data-bs-placement="right"
+                  title="Suka bilang bang"
+                  >@raiden_x420</a>
+              </p>
             </div>
           </div>
         </div>
@@ -429,7 +669,19 @@
             <img src="/img/21.jpg" class="card-img-top" alt="penghuni 2CA" />
             <div class="card-body">
               <h5 class="card-title">Reva</h5>
-              <p class="card-text">Penghuni 2CA 👻</p>
+              <p class="card-text">
+                <i class="bi bi-instagram"></i>
+                <span class="fw-bold">Instagram</span>
+                <br />
+                <a
+                  class="linkContact"
+                  href="https://www.instagram.com/vaapriyani_?igsh=OXFzcDNhMTVjc2hu"
+                  target="_blank"
+                  data-bs-toggle="tooltip"
+                  data-bs-placement="right"
+                  title="Suka bilang bang"
+                  >@vaapriyani_</a>
+              </p>
             </div>
           </div>
         </div>
@@ -443,7 +695,10 @@
             />
             <div class="card-body">
               <h5 class="card-title">Satria</h5>
-              <p class="card-text">Penghuni 2CA 👻</p>
+              <p class="card-text">
+                AKU KAYA<br>
+                AKU KAYA
+              </p>
             </div>
           </div>
         </div>
@@ -454,7 +709,19 @@
             <img src="/img/22.jpg" class="card-img-top" alt="penghuni 2CA" />
             <div class="card-body">
               <h5 class="card-title">Sintia</h5>
-              <p class="card-text">Penghuni 2CA 👻</p>
+              <p class="card-text">
+                <i class="bi bi-instagram"></i>
+                <span class="fw-bold">Instagram</span>
+                <br />
+                <a
+                  class="linkContact"
+                  href="https://www.instagram.com/sintiaacna_?igsh=MXFhYW84dTdneWRxcg=="
+                  target="_blank"
+                  data-bs-toggle="tooltip"
+                  data-bs-placement="right"
+                  title="Suka bilang bang"
+                  >@sintiaacna_</a>
+              </p>
             </div>
           </div>
         </div>
@@ -464,7 +731,19 @@
             <img src="/img/23.jpg" class="card-img-top" alt="penghuni 2CA" />
             <div class="card-body">
               <h5 class="card-title">Siti</h5>
-              <p class="card-text">Penghuni 2CA 👻</p>
+              <p class="card-text">
+                <i class="bi bi-instagram"></i>
+                <span class="fw-bold">Instagram</span>
+                <br />
+                <a
+                  class="linkContact"
+                  href="https://www.instagram.com/khodijah_caa?igsh=MXJyaDZ5YmVrMGk5Ng=="
+                  target="_blank"
+                  data-bs-toggle="tooltip"
+                  data-bs-placement="right"
+                  title="Suka bilang bang"
+                  >@khodijah_caa</a>
+              </p>
             </div>
           </div>
         </div>
