--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
             alt="Foto Sekelas"
           />
         </div>
-      </div> 
+      </div>
     </div>
     <br />
     <br />
@@ -222,7 +222,8 @@
                   data-bs-toggle="tooltip"
                   data-bs-placement="right"
                   title="Suka bilang bang"
-                  >@hanifchanz__</a>
+                  >@hanifchanz__</a
+                >
               </p>
             </div>
           </div>
@@ -234,7 +235,7 @@
             <div class="card-body">
               <h5 class="card-title">Ade</h5>
               <p class="card-text">
-                 <i class="bi bi-instagram"></i>
+                <i class="bi bi-instagram"></i>
                 <span class="fw-bold">Instagram</span>
                 <br />
                 <a
@@ -244,7 +245,8 @@
                   data-bs-toggle="tooltip"
                   data-bs-placement="right"
                   title="Suka bilang bang"
-                  >@adeapriliasafitri</a>
+                  >@adeapriliasafitri</a
+                >
               </p>
             </div>
           </div>
@@ -266,7 +268,8 @@
                   data-bs-toggle="tooltip"
                   data-bs-placement="right"
                   title="Ganteng bnget gw jir"
-                  >@akmckpp</a>
+                  >@akmckpp</a
+                >
               </p>
             </div>
           </div>
@@ -288,7 +291,8 @@
                   data-bs-toggle="tooltip"
                   data-bs-placement="right"
                   title="Suka bilang bang"
-                  >@arqyza</a>
+                  >@arqyza</a
+                >
               </p>
             </div>
           </div>
@@ -310,7 +314,8 @@
                   data-bs-toggle="tooltip"
                   data-bs-placement="right"
                   title="Suka bilang bang"
-                  >@resantodanuar35</a>
+                  >@resantodanuar35</a
+                >
               </p>
             </div>
           </div>
@@ -322,7 +327,7 @@
             <div class="card-body">
               <h5 class="card-title">Diah</h5>
               <p class="card-text">
-                 <i class="bi bi-instagram"></i>
+                <i class="bi bi-instagram"></i>
                 <span class="fw-bold">Instagram</span>
                 <br />
                 <a
@@ -332,7 +337,8 @@
                   data-bs-toggle="tooltip"
                   data-bs-placement="right"
                   title="Suka bilang bang"
-                  >@dip.tw</a>
+                  >@dip.tw</a
+                >
               </p>
             </div>
           </div>
@@ -360,7 +366,8 @@
                   data-bs-toggle="tooltip"
                   data-bs-placement="right"
                   title="Suka bilang bang"
-                  >@dinda_delaa</a>
+                  >@dinda_delaa</a
+                >
               </p>
             </div>
           </div>
@@ -372,7 +379,7 @@
             <div class="card-body">
               <h5 class="card-title">Dini</h5>
               <p class="card-text">
-                 <i class="bi bi-instagram"></i>
+                <i class="bi bi-instagram"></i>
                 <span class="fw-bold">Instagram</span>
                 <br />
                 <a
@@ -382,7 +389,8 @@
                   data-bs-toggle="tooltip"
                   data-bs-placement="right"
                   title="Suka bilang bang"
-                  >@scndchceee_</a>
+                  >@scndchceee_</a
+                >
               </p>
             </div>
           </div>
@@ -404,7 +412,8 @@
                   data-bs-toggle="tooltip"
                   data-bs-placement="right"
                   title="Suka bilang bang"
-                  >@dwivemi_aryani</a>
+                  >@dwivemi_aryani</a
+                >
               </p>
             </div>
           </div>
@@ -426,7 +435,8 @@
                   data-bs-toggle="tooltip"
                   data-bs-placement="right"
                   title="Suka bilang bang"
-                  >@elonarsy</a>
+                  >@elonarsy</a
+                >
               </p>
             </div>
           </div>
@@ -438,7 +448,7 @@
             <div class="card-body">
               <h5 class="card-title">Fadhli</h5>
               <p class="card-text">
-                 <i class="bi bi-instagram"></i>
+                <i class="bi bi-instagram"></i>
                 <span class="fw-bold">Instagram</span>
                 <br />
                 <a
@@ -448,7 +458,8 @@
                   data-bs-toggle="tooltip"
                   data-bs-placement="right"
                   title="Suka bilang bang"
-                  >@fadh.36</a>
+                  >@fadh.36</a
+                >
               </p>
             </div>
           </div>
@@ -470,7 +481,8 @@
                   data-bs-toggle="tooltip"
                   data-bs-placement="right"
                   title="Suka bilang bang"
-                  >@iga.mwr</a>
+                  >@iga.mwr</a
+                >
               </p>
             </div>
           </div>
@@ -498,7 +510,8 @@
                   data-bs-toggle="tooltip"
                   data-bs-placement="right"
                   title="Suka bilang bang"
-                  >@yogaa1.__</a>
+                  >@yogaa1.__</a
+                >
               </p>
             </div>
           </div>
@@ -520,7 +533,8 @@
                   data-bs-toggle="tooltip"
                   data-bs-placement="right"
                   title="Suka bilang bang"
-                  >@myngptr.lrsti</a>
+                  >@myngptr.lrsti</a
+                >
               </p>
             </div>
           </div>
@@ -542,7 +556,8 @@
                   data-bs-toggle="tooltip"
                   data-bs-placement="right"
                   title="Suka bilang bang"
-                  >@athamufidd</a>
+                  >@athamufidd</a
+                >
               </p>
             </div>
           </div>
@@ -564,7 +579,8 @@
                   data-bs-toggle="tooltip"
                   data-bs-placement="right"
                   title="Suka bilang bang"
-                  >@iqbalsyarief_</a>
+                  >@iqbalsyarief_</a
+                >
               </p>
             </div>
           </div>
@@ -586,7 +602,8 @@
                   data-bs-toggle="tooltip"
                   data-bs-placement="right"
                   title="Suka bilang bang"
-                  >@karldenza</a>
+                  >@karldenza</a
+                >
               </p>
             </div>
           </div>
@@ -608,7 +625,8 @@
                   data-bs-toggle="tooltip"
                   data-bs-placement="right"
                   title="Suka bilang bang"
-                  >@mhdzkyy05</a>
+                  >@mhdzkyy05</a
+                >
               </p>
             </div>
           </div>
@@ -636,7 +654,8 @@
                   data-bs-toggle="tooltip"
                   data-bs-placement="right"
                   title="Suka bilang bang"
-                  >@muthi.aa0</a>
+                  >@muthi.aa0</a
+                >
               </p>
             </div>
           </div>
@@ -658,7 +677,8 @@
                   data-bs-toggle="tooltip"
                   data-bs-placement="right"
                   title="Suka bilang bang"
-                  >@raiden_x420</a>
+                  >@raiden_x420</a
+                >
               </p>
             </div>
           </div>
@@ -680,7 +700,8 @@
                   data-bs-toggle="tooltip"
                   data-bs-placement="right"
                   title="Suka bilang bang"
-                  >@vaapriyani_</a>
+                  >@vaapriyani_</a
+                >
               </p>
             </div>
           </div>
@@ -696,7 +717,7 @@
             <div class="card-body">
               <h5 class="card-title">Satria</h5>
               <p class="card-text">
-                AKU KAYA<br>
+                AKU KAYA<br />
                 AKU KAYA
               </p>
             </div>
@@ -720,7 +741,8 @@
                   data-bs-toggle="tooltip"
                   data-bs-placement="right"
                   title="Suka bilang bang"
-                  >@sintiaacna_</a>
+                  >@sintiaacna_</a
+                >
               </p>
             </div>
           </div>
@@ -742,7 +764,8 @@
                   data-bs-toggle="tooltip"
                   data-bs-placement="right"
                   title="Suka bilang bang"
-                  >@khodijah_caa</a>
+                  >@khodijah_caa</a
+                >
               </p>
             </div>
           </div>
