--- a/index.html
+++ b/index.html
@@ -689,7 +689,7 @@
         <div class="col">
           <div class="card">
             <img
-              src="/img/pictca22.jpg"
+              src="img/sartek.jpg"
               class="card-img-top"
               alt="penghuni 2CA"
             />
@@ -697,7 +697,7 @@
               <h5 class="card-title">Satria</h5>
               <p class="card-text">
                 AKU KAYA<br>
-                AKU KAYA
+                AKU KAYA<br>
               </p>
             </div>
           </div>
